Fixed z-index of the logo.

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -3,7 +3,7 @@
     width: 100px;
     height: 112px;
     background-size: contain;
-    z-index: 222;
+    z-index: $z-index-6;
     position: absolute;
     left: 20px;
 
